tests/out/error/attributes/required.out
tests/out/error/attributes/required.in.bt:2:10 error: @required on field with default value is redundant
